[metadata]
name = stardust
author = Steven Rodney
author_email = steve.rodney@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url =https://github.com/srodney/stardust2
description = Photometric supernova classification with sncosmo
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = srodney/stardust

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy, sncosmo, nestle

[options.entry_points]
console_scripts =
    stardust-classify = stardust.classify:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
packagename = data/*

[tool:pytest]
testpaths = "packagename" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    packagename/_astropy_init*
    packagename/conftest.py
    packagename/*setup_package*
    packagename/tests/*
    packagename/*/tests/*
    packagename/extern/*
    packagename/version*
    */packagename/_astropy_init*
    */packagename/conftest.py
    */packagename/*setup_package*
    */packagename/tests/*
    */packagename/*/tests/*
    */packagename/extern/*
    */packagename/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
